# jellytui

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  config.rs  jellyfin.rs  lib.rs  main.rs
